fixed p overflow

--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ p {
   text-indent: 1rem;
   padding: 1rem;
   position: inherit;
+  overflow: hidden;
 }
 
 /*footer style*/
